[package]
name = "tlstuc"
version = "0.1.0"
edition = "2021"
authors = ["tlstuc Team"]
description = "هناك"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
self_update = "0.38"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
peg = "0.8"
inkwell = { version = "0.2", features = ["llvm15-0"] }
tempfile = "3.8"
which = "4.4"

[[bin]]
name = "tc"
path = "src/main.rs"